minor but important contrast fix

--- a/src/styles/main/contrast.scss
+++ b/src/styles/main/contrast.scss
@@ -192,8 +192,7 @@ body.contrast{
 	// BORDER 1px solid
 	.loop-gastronomy-post__bottom > a:not(.button-link),
 	.loop-accommodation-post__bottom > a:not(.button-link),
-	.arrows > button,
-	.sidebar{
+	.arrows > button{
 		border: 1px solid $contrast;
 	}
 
